# PRCx

./: COPYING  DP_common.c  DP_inner_wrapper_1.c  DP_inner_wrapper_2.c  DP_search.c  DP_traceback.c  HMM.c  LPMO10.prc  Makefile  Makefile.in  README  STYLE  auto_DP_comps.c  auto_DP_inner_loop.c  auto_DP_which_comps.c  backward_transitions.txt  common.c  config.cache  config.status  configure  configure.ac  context.c  convert_to_prc  convert_to_prc.c  cs219.h  cs219.lib  forward_transitions.txt  match.c  prc.c  prc.h  prcX  region.c  seqio.c  seqio.h  ssw.c  ssw.h  stats.c  upgma.c  upgma.h  write_auto_files.pl
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
examples/: LPMO.lib  LPMO.newick  Table S1.xlsx  prc  redLPMO.distmat  redLPMO.lib  redLPMO.newick  top10LPMO.distmat  top10LPMO.lib  top10LPMO.newick
examples/LPMOs/: 0.hmm  1.hmm  1000.hmm  1001.hmm  1002.hmm  1003.hmm  1004.hmm  1005.hmm  1006.hmm  1007.hmm  1008.hmm  1009.hmm  101.hmm  1010.hmm  1011.hmm  1012.hmm  1013.hmm  1014.hmm  1015.hmm  1016.hmm  1017.hmm  1018.hmm  1019.hmm  102.hmm  1020.hmm  1021.hmm  1022.hmm  1023.hmm  1024.hmm  1025.hmm  1026.hmm  1027.hmm  1028.hmm  1029.hmm  103.hmm  1030.hmm  1031.hmm  1032.hmm  1033.hmm  1034.hmm  (+1670 more)
examples/redLPMOs/: 10.hmm  100.hmm  104.hmm  106.hmm  110.hmm  111.hmm  112.hmm  113.hmm  114.hmm  115.hmm  118.hmm  119.hmm  12.hmm  120.hmm  122.hmm  123.hmm  129.hmm  131.hmm  132.hmm  133.hmm  135.hmm  136.hmm  137.hmm  14.hmm  140.hmm  142.hmm  153.hmm  156.hmm  157.hmm  159.hmm  161.hmm  (+76 more)
tools/: hmmdump  hmmdump.c  stb.h
(+41 files in other folders)
